fix get in touch badge contrast issues

--- a/tbx/static_src/sass/components/_theme.scss
+++ b/tbx/static_src/sass/components/_theme.scss
@@ -41,7 +41,7 @@ Icon colour used for:
         --color--background: var(--color--white);
         --color--section-title: var(--color--coral);
         --color--header-icon-color: var(--color--coral);
-        --color--get-in-touch-numbers: var(--color-white);
+        --color--get-in-touch-numbers: var(--color--white);
         --color--header-links: var(--color--dark-indigo);
         --color--icon: var(--color--coral);
     }
